[gd_scene load_steps=5 format=3 uid="uid://dlepiqomeuchs"]

[ext_resource type="Shader" path="res://resources/shaders/dither_fs.gdshader" id="1_2b3rj"]
[ext_resource type="Script" path="res://addons/2d_shapes/shapes/Ellipse.gd" id="1_34ao6"]
[ext_resource type="Script" path="res://scenes/playground/spinning_circle/spinning_circle.gd" id="1_af6g3"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_b5kvj"]
shader = ExtResource("1_2b3rj")

[node name="SpinningCircle" type="Node2D"]
script = ExtResource("1_af6g3")
starting_angle = 503.451
radius = 106.839
rotations_per_second = 0.56

[node name="OuterCircle" type="Node2D" parent="."]
material = SubResource("ShaderMaterial_b5kvj")
script = ExtResource("1_34ao6")
size = Vector2(213.678, 213.678)
circle = true
style = 1
outline_width = 2
fill_color = Color(1, 1, 1, 0)

[node name="OrbitingCircle" type="Node2D" parent="."]
position = Vector2(74.7289, 76.3555)
rotation = 503.451
script = ExtResource("1_34ao6")
size = Vector2(10, 10)
circle = true
fill_color = Color(0, 0, 0, 1)
